--- a/apps/ecommercesite/templates/ecommercesite/ProductbyCategory.html
+++ b/apps/ecommercesite/templates/ecommercesite/ProductbyCategory.html
@@ -1,4 +1,5 @@
 {% extends "ecommercesite/base.html" %}
+{% load static %}
  {% block title %} Shop {% endblock title %}
  {% block body %}
      <!-- Shop Start -->
@@ -132,7 +133,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 pb-1">
                         <div class="card product-item border-0 mb-4">
                             <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                                <img class="img-fluid w-100" src="{% static 'img/'%}{{item.imageUrl}}" alt="">
+                                <img class="img-fluid w-100" src="{% static 'img/' %}{{product.imageUrl}}" alt="">
                             </div>
                             <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                                 <h6 class="text-truncate mb-3">{{product.name}}</h6>
