--- a/apps/ecommercesite/templates/ecommercesite/ProductDetailView.html
+++ b/apps/ecommercesite/templates/ecommercesite/ProductDetailView.html
@@ -11,7 +11,7 @@
                 <div id="product-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner border">
                         <div class="carousel-item active">
-                            <img class="w-100 h-100" src="{% static 'img/'%}{{product.imageUrl}}"  alt="Image">
+                            <img class="w-100 h-100" src="{% static 'img'%}{{product.imageUrl}}"  alt="Image">
                             
                         </div>                        
                     </div>
